# NimGame

./: .gitignore  CMakeLists.txt  compile_commands.json
.cache/clangd/index/: Constants.h.2C2195959654AD07.idx  main.c.630988B9A03E1ED1.idx  main.c.9436A06E208A456A.idx
headers/: Computer.h  Constants.h  Game.h  Screen.h  Utils.h
src/: Computer.c  Constants.c  Game.c  Screen.c  Utils.c  main.c
